# dis86

./: .gitignore  CMakeLists.txt
polyfill/: format
src/: array.h  binary.h  core.cpp  datamap.c  datamap.cpp  datamap.h  decode.c  decode.cpp  dis86.cpp  dis86.h  dis86_private.h  header.h  instr.cpp  instr.h  print_intel_syntax.c  print_intel_syntax.cpp  segoff.h  str.h
src/app/: decompiler.cpp  disassembler.cpp  exec_mode_decomp.c  exec_mode_decomp.cpp  main.cpp
src/bsl/: bsl.cpp  bsl.h
src/cmdarg/: cmdarg.cpp  cmdarg.h
src/common/: common.cpp  common.h  dynarray.cpp  dynarray.h  segment.h
src/decompile/: config.c  config.cpp  config.h  decompile.c  decompile.cpp  decompile_private.h  expr.c  expr.cpp  expr.h  labels.h  symbols.c  symbols.cpp  symbols.h  transform.c  transform.cpp  type.cpp  type.h  value.cpp  value.h
src/platform/: dos.cpp  dos.h
